alocacao corrigida