@@ -92,6 +92,7 @@ public class AlocacaoPosicaoService {
 
         List<ItemAlocacao> resultado = new ArrayList<>();
         List<Posicao> posicoesAlocadas = alocacao.get();
+
         for (int i = 0; i < pessoas.size(); i++) {
             resultado.add(new ItemAlocacao(pessoas.get(i), posicoesAlocadas.get(i)));
         }
@@ -135,7 +136,7 @@ public class AlocacaoPosicaoService {
                 return solucao;
             }
 
-            atribuidas.removeLast();
+            atribuidas.remove(atribuidas.size() - 1);
             usadas.remove(candidata.getId());
         }
 
@@ -172,34 +173,40 @@ public class AlocacaoPosicaoService {
         }
 
         String tipoPosicao = posicao.getTipo().trim();
+
         return preferencias.stream()
                 .anyMatch(pref -> pref.equalsIgnoreCase(tipoPosicao));
     }
 
     private Posicao escolherMelhorRank(List<Posicao> candidatas, PessoaReservaRequest pessoa) {
-        return ordenarPorRank(candidatas, pessoa).getFirst();
+        return ordenarPorRank(candidatas, pessoa).get(0);
     }
 
     private Posicao escolherMaisProxima(List<Posicao> candidatas, List<Posicao> atribuidas) {
         if (atribuidas.isEmpty()) {
-            return candidatas.getFirst();
+            return candidatas.get(0);
         }
-        return ordenarPorProximidade(candidatas, atribuidas).getFirst();
+
+        return ordenarPorProximidade(candidatas, atribuidas).get(0);
     }
 
     private List<Posicao> ordenarPorRank(List<Posicao> candidatas, PessoaReservaRequest pessoa) {
         return candidatas.stream()
                 .sorted(Comparator
                         .comparingInt((Posicao p) -> rankPreferencia(p, pessoa))
-                        .thenComparing(Posicao::getIdentificador, String.CASE_INSENSITIVE_ORDER))
+                        .thenComparing(
+                                Posicao::getIdentificador,
+                                Comparator.nullsLast(String.CASE_INSENSITIVE_ORDER)))
                 .toList();
     }
 
     private List<Posicao> ordenarPorProximidade(List<Posicao> candidatas, List<Posicao> referencias) {
         return candidatas.stream()
                 .sorted(Comparator
-                        .comparingDouble(c -> distanciaMinima(c, referencias))
-                        .thenComparing(Posicao::getIdentificador, String.CASE_INSENSITIVE_ORDER))
+                        .comparingDouble((Posicao c) -> distanciaMinima(c, referencias))
+                        .thenComparing(
+                                Posicao::getIdentificador,
+                                Comparator.nullsLast(String.CASE_INSENSITIVE_ORDER)))
                 .toList();
     }
 
@@ -207,16 +214,21 @@ public class AlocacaoPosicaoService {
         if (posicao.getTipo() == null) {
             return Integer.MAX_VALUE;
         }
+
         String tipo = posicao.getTipo().trim();
+
         if (equalsIgnoreCase(pessoa.tipoPreferido1(), tipo)) {
             return 1;
         }
+
         if (equalsIgnoreCase(pessoa.tipoPreferido2(), tipo)) {
             return 2;
         }
+
         if (equalsIgnoreCase(pessoa.tipoPreferido3(), tipo)) {
             return 3;
         }
+
         return Integer.MAX_VALUE;
     }
 
@@ -243,6 +255,7 @@ public class AlocacaoPosicaoService {
                 }
             }
         }
+
         return true;
     }
 
@@ -253,6 +266,7 @@ public class AlocacaoPosicaoService {
 
         double dx = a.getCoordX().doubleValue() - b.getCoordX().doubleValue();
         double dy = a.getCoordY().doubleValue() - b.getCoordY().doubleValue();
+
         return Math.sqrt(dx * dx + dy * dy);
     }
 
@@ -262,7 +276,9 @@ public class AlocacaoPosicaoService {
 
     private List<Posicao> ordenarPosicoes(List<Posicao> posicoes) {
         return posicoes.stream()
-                .sorted(Comparator.comparing(Posicao::getIdentificador, String.CASE_INSENSITIVE_ORDER))
+                .sorted(Comparator.comparing(
+                        Posicao::getIdentificador,
+                        Comparator.nullsLast(String.CASE_INSENSITIVE_ORDER)))
                 .toList();
     }
 
